automatically backed up by learn

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,8 @@
 /* GLOBAL STYLES
 ======================== */
+https://i.imgur.com/3IKDCJr.jpg
+https://i.imgur.com/gkQp2VT.jpg
+
 
 *, *:before, *:after {
   box-sizing: border-box;
