--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,15 @@
 /* GLOBAL STYLES
 ======================== */
-https://i.imgur.com/3IKDCJr.jpg
-https://i.imgur.com/gkQp2VT.jpg
+
+
+
+#firstname-lastname-cover {
+  background-image: url("https://i.imgur.com/gkQp2VT.jpg");
+}
+
+#firstname-lastname-card {
+  background-image: url("https://i.imgur.com/3IKDCJr.jpg");
+}
 
 
 *, *:before, *:after {
