--- a/css/styles.css
+++ b/css/styles.css
@@ -3,11 +3,11 @@
 
 
 
-#firstname-lastname-cover {
+#madeline-stark-cover {
   background-image: url("https://i.imgur.com/gkQp2VT.jpg");
 }
 
-#firstname-lastname-card {
+#madeline-stark-card {
   background-image: url("https://i.imgur.com/3IKDCJr.jpg");
 }
 
